proptest-attributes/tests/compile-fail/two_strategies.stderr
error: Expected at maximum one #[strategy] attribute
 --> $DIR/two_strategies.rs:6:5
  |
6 |     #[strategy("[a-z]{1}")]
  |     ^
